[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "memary"
version = "0.1.2"
authors = [
  { name="memary Labs", email="hello@memarylabs.com" },
]
description = "Longterm Memory for Autonomous Agents"
readme = "README_hidden.md"
requires-python = ">=3.8, <=3.11.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "FalkorDB==1.0.8",
    "neo4j==5.17.0",
    "python-dotenv==1.0.1",
    "pyvis==0.3.2",
    "streamlit==1.38.0",
    "llama-index==0.11.4",
    "llama-index-agent-openai==0.3.0",
    "llama-index-core==0.11.4",
    "llama-index-embeddings-openai==0.2.4",
    "llama-index-graph-stores-nebula==0.3.0",
    "llama-index-graph-stores-neo4j==0.3.1",
    "llama-index-graph-stores-falkordb==0.2.1",
    "llama-index-legacy==0.9.48",
    "llama-index-llms-openai==0.2.1",
    "llama-index-multi-modal-llms-openai==0.2.0",
    "llama-index-program-openai==0.2.0",
    "llama-index-question-gen-openai==0.2.0",
    "llama-index-readers-file==0.2.0",
    "langchain==0.1.12",
    "langchain-openai==0.0.8",
    "llama-index-llms-perplexity==0.2.0",
    "llama-index-multi-modal-llms-ollama==0.3.0",
    "llama-index-llms-ollama==0.3.1",
    "pandas",
    "geocoder",
    "googlemaps",
    "ansistrip",
    "numpy",
    "ollama",
]

[project.urls]
Homepage = "https://github.com/kingjulio8238/memary"
Issues = "https://github.com/kingjulio8238/memary/issues"